feat : getallitems
